user fixtures, login almost done. todo: register form

--- a/src/PiupiuBundle/Resources/translations/messages.fr_FR.yml
+++ b/src/PiupiuBundle/Resources/translations/messages.fr_FR.yml
@@ -1,2 +1,4 @@
 Username: Identifiant
 Password: Mot de passe
+Username could not be found.: Utilisateur inconnu.
+Invalid credentials.: Votre mot de passe est incorrect.
