security, begin password forgotten

--- a/src/PiupiuBundle/Resources/translations/messages.fr_FR.yml
+++ b/src/PiupiuBundle/Resources/translations/messages.fr_FR.yml
@@ -2,3 +2,6 @@ Username: Identifiant
 Password: Mot de passe
 Username could not be found.: Utilisateur inconnu.
 Invalid credentials.: Votre mot de passe est incorrect.
+Forgot my password: Mot de passe oublié
+Recover: Récupérer
+email: email
