form refactoring, pwd forgotten form, as a service

--- a/src/PiupiuBundle/Resources/translations/messages.fr_FR.yml
+++ b/src/PiupiuBundle/Resources/translations/messages.fr_FR.yml
@@ -5,3 +5,9 @@ Invalid credentials.: Votre mot de passe est incorrect.
 Forgot my password: Mot de passe oublié
 Recover: Récupérer
 email: email
+Email: Email
+Login: Connexion
+Email or Username: Email ou Identifiant
+A new password has been send to your email.: Un nouveau mot de passe vous a été envoyé.
+Your temporary email: Votre mot de passe temporaire.
+This email will have to be change upon first login: Ce mot de passe devra être modifié après votre première connexion
