Change login on first login. Entity and structure, and form. Todo: handle form

--- a/src/PiupiuBundle/Resources/translations/messages.fr_FR.yml
+++ b/src/PiupiuBundle/Resources/translations/messages.fr_FR.yml
@@ -11,3 +11,7 @@ Email or Username: Email ou Identifiant
 A new password has been send to your email.: Un nouveau mot de passe vous a été envoyé.
 Your temporary email: Votre mot de passe temporaire.
 This email will have to be change upon first login: Ce mot de passe devra être modifié après votre première connexion
+Old Password: Ancien mot de passe
+Repeat Password: Répéter le mot de passe
+OK: Validé
+New Password: Nouveau mot de passe
