change password now complete. change on first login implemented

--- a/src/PiupiuBundle/Resources/translations/messages.fr_FR.yml
+++ b/src/PiupiuBundle/Resources/translations/messages.fr_FR.yml
@@ -9,9 +9,13 @@ Email: Email
 Login: Connexion
 Email or Username: Email ou Identifiant
 A new password has been send to your email.: Un nouveau mot de passe vous a été envoyé.
-Your temporary email: Votre mot de passe temporaire.
+Your temporary password: Votre mot de passe temporaire.
 This email will have to be change upon first login: Ce mot de passe devra être modifié après votre première connexion
 Old Password: Ancien mot de passe
 Repeat Password: Répéter le mot de passe
 OK: Validé
 New Password: Nouveau mot de passe
+Change your Password: Changer votre mot de passe
+For security reasons, your password has to be changed: Votre mot de passe doit être modifié pour des raisons de sécurité
+Your password has been changed: Votre mot de passe à été modifié
+An email has been send to you.: Un email vous a été envoyé.
