register form continues

--- a/src/PiupiuBundle/Resources/translations/messages.fr_FR.yml
+++ b/src/PiupiuBundle/Resources/translations/messages.fr_FR.yml
@@ -19,3 +19,13 @@ Change your Password: Changer votre mot de passe
 For security reasons, your password has to be changed: Votre mot de passe doit être modifié pour des raisons de sécurité
 Your password has been changed: Votre mot de passe à été modifié
 An email has been send to you.: Un email vous a été envoyé.
+Register: Inscription
+Your username: Votre identifiant
+Firstname: Prénom
+Your firstname: Votre prénom
+Name: Nom
+Your name: Votre nom
+Your email: Votre email
+Phone: Tel
+Your phone number: Votre numéro de téléphone
+Sign up: inscription
