register form done

--- a/src/PiupiuBundle/Resources/translations/messages.fr_FR.yml
+++ b/src/PiupiuBundle/Resources/translations/messages.fr_FR.yml
@@ -30,3 +30,6 @@ Phone: Tel
 Your phone number: Votre numéro de téléphone
 Sign up: inscription
 Sign in: Connexion
+Account type: Type de compte
+Your password: Votre mot de passe
+Your account has successfully been created: Votre compte a été créé
