--- a/src/PiupiuBundle/Resources/translations/messages.fr_FR.yml
+++ b/src/PiupiuBundle/Resources/translations/messages.fr_FR.yml
@@ -33,3 +33,8 @@ Sign in: Connexion
 Account type: Type de compte
 Your password: Votre mot de passe
 Your account has successfully been created: Votre compte a été créé
+Change your password: Changer votre mot de passe
+Your profil: Votre profil
+last login: dernière connexion
+modify: modifier
+Your account information have been updated.: Votre profil a été modifié.
